Commit set up netlist reader, need to set up recursion to build the tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(excursion2_prog2 main.cpp
         main.cpp
-        FileInputOutput.h)
+        FileInputOutput.h
+        TreeMake.h)
 
 
